Another try getting the test to succeed.

--- a/branches/NSD_3_2_SEXY/tpkg/dnssexy-setup/Makefile.in
+++ b/branches/NSD_3_2_SEXY/tpkg/dnssexy-setup/Makefile.in
@@ -214,7 +214,7 @@ clean: stop \
 	clean-servers \
 	clean-tsigs
 	echo "-- Removing multitail script ...";
-	rm -f multitail.sh; fi
+	rm -f multitail.sh
 
 realclean: clean
 	rm -f config.log config.status Makefile
