Remaining code review changes
Wouter part 1:
        - made SURE_PART_BAD, VERIFIED and UNVERIFIED values of a enum type
        - replaced all occurences of fd > 0 and fd >= 0 with fd != -1
        - removed printf from ZONE_GET_STR_LIST
        - removed word available with first addresses and ports env variables in the nsd.conf manpage
        - Clarified values of verifier_timeout in server and in zone sections with defines ZONE_VERIFIER_TIMEOUT_INHERIT (-1) and VERIFIER_NOTIMEOUT (0)
        - Removed REGION_XMALLOC define

Wouter part 2:
        - Removed goto in server_verifiers_wait by introducing the all_verifiers_are_done function
        - Some typo fixes
        - Added braces with nested assigments
        - Turned *copy++ into memmove

Matthijs:
	- Turned LOG_INFO messages from write_commit_trail into debug messages
	- Changed return value of server_init, init_make_udp_sockets and init_make_tcp_sockets into booleans for clarification.

Willem:
        - renamed VERIFY_IP_PORT in VERIFY_PORTinit_make_tcp_sockets

--- a/branches/NSD_3_2_SEXY/nsd.conf.5.in
+++ b/branches/NSD_3_2_SEXY/nsd.conf.5.in
@@ -395,18 +395,17 @@ will be served.
 .RE
 .B VERIFY_IP_ADDRESS
 .RS
-The first available ip address on which the zones to be assessed will be
-served.  If IPv6 is available an IPv6 address will be prefered over IPv4.
+The first address on which the zones to be assessed will be served.
+If IPv6 is available an IPv6 address will be prefered over IPv4.
 .RE
-.B VERIFY_IP_PORT
+.B VERIFY_PORT
 .RS
 the port number for 
 .B VERIFY_IP_ADDRESS
 .RE
 .B VERIFY_IPV6_ADDRESS
 .RS
-The first available IPv6 address on which the zones to be assessed will be
-served.
+The first IPv6 address on which the zones to be assessed will be served.
 .RE
 .B VERIFY_IPV6_PORT
 .RS
@@ -415,8 +414,7 @@ The port number for
 .RE
 .B VERIFY_IPV4_ADDRESS
 .RS
-The first available IPv4 address on which the zones to be assessed will be
-served.
+The first IPv4 address on which the zones to be assessed will be served.
 .RE
 .B VERIFY_IPV4_PORT
 .RS
